--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Opeoluwa Adeoye</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Inter:wght@300;400&family=Mulish:wght@200;300;400;500;600&display=swap"
-      rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Mulish:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="apple-touch-icon" sizes="180x180"
