--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
     <title>Opeoluwa Adeoye</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&family=Mulish:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Inter:wght@300;400&family=Mulish:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap" rel="stylesheet"> 
     <link rel="stylesheet"
       href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="apple-touch-icon" sizes="180x180"
       href="src/assets/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="src/assets/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="src/assets/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32"
+      href="src/assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16"
+      href="src/assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="src/assets/favicon/site.webmanifest">
   </head>
   <body>
