--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       href="src/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
       href="src/assets/favicon/favicon-16x16.png">
-    <link rel="manifest" href="src/assets/favicon/site.webmanifest">
+    <link rel="manifest" href="public/manifest.json">
   </head>
 
   <body>
