--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       href="src/assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
       href="src/assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="manifest.json">
+
   </head>
 
   <body>
