--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>nitride</title>
+    <!-- <meta http-equiv="content-security-policy" content="default-src https:"> -->
+    <meta name="description" content="a compound of nitrogen">
+    <meta property="og:title" content="nitride" />
+    <meta property="og:description" content="a compound of nitrogen"/>
+    <meta property="og:image"
+      content="http://nitride.onrender.com/favicon/apple-touch-icon.png" />
+    <meta property="og:image:alt" content="nitride" />
+    <!--twitter -->
+    <meta name="twitter:title" content="nitride">
+    <meta name="twitter:description" content="a compound of nitrogen"/>
+    <meta name="twitter:url" content="https://nitride.onrender.com/?src=twitter"
+      />
+    <meta name="twitter:image:src"
+      content="http://nitride.onrender.com/favicon/apple-touch-icon.png"/>
+    <meta name="twitter:image:alt" content="nitride" />
+    <meta name="twitter:creator" content="@opeolluwa">
+    <meta name="twitter:site" content="@perfmattersconf">
+    <!--the application is web capable-->
+    <meta name="apple-mobile-web-app-capable" content="yes">  
+<meta name="mobile-web-app-capable" content="yes">  
+    <title>nitride </title>
     <meta name="description" content="a compound of nitrogen">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,13 +38,13 @@
     <link rel="icon" href="src/assets/favicon/favicon.ico">
     <link rel="mask-icon" href="src/assets/favicon/favicon-32x32.png"
       color="#FFFFFF">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#101010">
     <link rel="apple-touch-icon" sizes="180x180"
-      href="src/assets/favicon/apple-touch-icon.png">
+      href="favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-      href="src/assets/favicon/favicon-32x32.png">
+      href="favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-      href="src/assets/favicon/favicon-16x16.png">
+      href="favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
 
   </head>
