--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <meta name="twitter:creator" content="@opeolluwa">
     <meta name="twitter:site" content="@perfmattersconf">
     <!--the application is web capable-->
-    <meta name="apple-mobile-web-app-capable" content="yes">  
-<meta name="mobile-web-app-capable" content="yes">  
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <title>nitride </title>
     <meta name="description" content="a compound of nitrogen">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,16 +35,16 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Inter:wght@300;400&family=Mulish:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
       rel="stylesheet">
-    <link rel="icon" href="src/assets/favicon/favicon.ico">
-    <link rel="mask-icon" href="src/assets/favicon/favicon-32x32.png"
+    <link rel="icon" href="/favicon/favicon.ico">
+    <link rel="mask-icon" href="/favicon/favicon-32x32.png"
       color="#FFFFFF">
     <meta name="theme-color" content="#101010">
     <link rel="apple-touch-icon" sizes="180x180"
-      href="favicon/apple-touch-icon.png">
+      href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
-      href="favicon/favicon-32x32.png">
+      href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16"
-      href="favicon/favicon-16x16.png">
+      href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
 
   </head>
