--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="icon" href="/favicon/favicon.ico">
     <link rel="mask-icon" href="/favicon/favicon-32x32.png"
       color="#FFFFFF">
-    <meta name="theme-color" content="#101010">
+    <meta name="theme-color" content="#f2f2f2">
     <link rel="apple-touch-icon" sizes="180x180"
       href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
