--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       rel="stylesheet">
     <link rel="icon" href="/favicon/favicon.ico">
     <link rel="mask-icon" href="/favicon/favicon-32x32.png"
-      color="#FFFFFF">
-    <meta name="theme-color" content="#f2f2f2">
+      color="#101010">
+    <meta name="theme-color" content="#101010">
     <link rel="apple-touch-icon" sizes="180x180"
       href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32"
