--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Inter:wght@300;400&family=Mulish:wght@200;300;400;500;600&family=Open+Sans:ital,wght@0,300;0,400;0,500;1,400&display=swap"
-      rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link
+  href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,700&family=Poppins:ital,wght@0,400;0,500;0,600;1,400&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400;1,500&display=swap"
+  rel="stylesheet">
     <link rel="icon" href="/favicon/favicon.ico">
     <link rel="mask-icon" href="/favicon/favicon-32x32.png"
       color="#000">
@@ -47,8 +53,8 @@
       href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
 
-    <script type="module" crossorigin src="/assets/index.946627cc.js"></script>
-    <link rel="stylesheet" href="/assets/index.5d020711.css">
+    <script type="module" crossorigin src="/assets/index.f5b45506.js"></script>
+    <link rel="stylesheet" href="/assets/index.9b5d6b5c.css">
   <link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
 
   <body>
