--- a/index.html
+++ b/index.html
@@ -28,19 +28,8 @@
     <meta name="description" content="a compound of nitrogen">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link
-  href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,400;0,700;1,700&family=Poppins:ital,wght@0,400;0,500;0,600;1,400&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,400;1,500&display=swap"
-  rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;1,300;1,500&display=swap"
+      rel="stylesheet">
     <link rel="icon" href="/favicon/favicon.ico">
     <link rel="mask-icon" href="/favicon/favicon-32x32.png"
       color="#000">
@@ -53,8 +42,8 @@
       href="/favicon/favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
 
-    <script type="module" crossorigin src="/assets/index.01c26d94.js"></script>
-    <link rel="stylesheet" href="/assets/index.510dad3b.css">
+    <script type="module" crossorigin src="/assets/index.6b721bd6.js"></script>
+    <link rel="stylesheet" href="/assets/index.7ff7691b.css">
   <link rel="manifest" href="/manifest.webmanifest"><script id="vite-plugin-pwa:register-sw" src="/registerSW.js"></script></head>
 
   <body>
